[package]
name = "unchecked_unwrap"
version = "2.0.0"
authors = ["daxpedda <daxpedda@gmail.com>"]
edition = "2018"
description = "Adds an unchecked version of `unwrap()` and `expect()` to Option and Result."
readme = "README.md"
repository = "https://github.com/daxpedda/unchecked_unwrap/tree/stable/"
license = "MIT OR Apache-2.0"
keywords = ["unwrap", "unchecked", "expect", "result", "option"]
categories = ["no-std", "rust-patterns"]
exclude = ["/.github"]

[badges]
is-it-maintained-issue-resolution = { repository = "daxpedda/unchecked_unwrap" }
is-it-maintained-open-issues = { repository = "daxpedda/unchecked_unwrap" }
maintenance = { status = "passively-maintained" }

[features]
default = ["debug_checks"]
debug_checks = []
nightly = []

# cleaning some output from `cargo test` and `cargo bench`
[lib]
test = false
bench = false

# docs.rs needs some pointers to do proper documentation
[package.metadata.docs.rs]
features = ["nightly"]
targets = ["x86_64-unknown-linux-gnu"]
