[package]
name = "unchecked_unwrap"
version = "4.0.0"
edition = "2018"
description = "Adds an unchecked version of `unwrap()` and `expect()` to Option and Result."
readme = "README.md"
repository = "https://github.com/daxpedda/unchecked_unwrap/tree/release"
license = "MIT OR Apache-2.0"
keywords = ["unwrap", "unchecked", "expect", "result", "option"]
categories = ["no-std", "rust-patterns"]
exclude = [".github"]
rust-version = "1.54"

[features]
default = ["debug_checks"]
debug_checks = []

# cleaning some output from `cargo test` and `cargo bench`
[lib]
test = false
bench = false

# docs.rs needs some pointers to do proper documentation
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
